objects/Case.object
<CustomObject>
    <fields>
        <fullName>PT_Program_Price_List_ID__c</fullName>
        <formula>IF(
NOT(ISBLANK(PT_Program__r.Sales_Opportunity__r.PT_Price_List__r.L2I_Header_ExternalId__c)) ||
PT_Program__r.Sales_Opportunity__r.PT_Price_List__r.L2I_IntegrationStatus__c = &quot;Success&quot;,
PT_Program__r.Sales_Opportunity__r.PT_Price_List__r.L2I_Header_ExternalId__c,
Null
)</formula>
        <inlineHelpText>Price List ID from Oracle, required prior to Order generation</inlineHelpText>
        <label>Program Price List ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>PT_Program__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bug Fix</fullName>
                </value>
                <value>
                    <fullName>ISE Update</fullName>
                </value>
                <value>
                    <fullName>Interactive</fullName>
                </value>
                <value>
                    <fullName>MCS Update</fullName>
                </value>
                <value>
                    <fullName>Maps CoK</fullName>
                </value>
                <value>
                    <fullName>New Line Station</fullName>
                </value>
                <value>
                    <fullName>Non Flight Software</fullName>
                </value>
                <value>
                    <fullName>PostProd Cust Update</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Reconfiguration</fullName>
                </value>
                <value>
                    <fullName>Retrofit</fullName>
                </value>
                <value>
                    <fullName>SCR</fullName>
                </value>
                <value>
                    <fullName>SW Tools</fullName>
                </value>
                <value>
                    <fullName>SW UPDATE</fullName>
                </value>
                <value>
                    <fullName>Spares</fullName>
                </value>
                <value>
                    <fullName>Voyager</fullName>
                </value>
                <value>
                    <fullName>iXplor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Ship_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship to Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value in Ship to Contact does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.PT_Site__c</field>
                <operation>equals</operation>
                <valueField>$Source.PT_Ship_to_Location__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Ship_to_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer that drives Ship to Information for Parts</description>
        <label>Ship to Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>PO_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Ship_to_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Site (Address) for shipping parts</description>
        <label>Ship to Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value in Ship to Location does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>L2I_Site__c.PT_AccountId__c</field>
                <operation>equals</operation>
                <valueField>$Source.PT_Ship_to_Customer__c</valueField>
            </filterItems>
            <filterItems>
                <field>L2I_Site__c.L2I_Site_Use_Code__c</field>
                <operation>equals</operation>
                <value>Ship_To</value>
            </filterItems>
            <filterItems>
                <field>L2I_Site__c.L2I_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>L2I_Site__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Shipping_Instructions__c</fullName>
        <label>Shipping Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_Shipping_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Method</label>
        <referenceTo>Shipping_Method__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Special_QA_Instruction_Picklist__c</fullName>
        <label>Special QA Instruction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airbus Source</fullName>
                </value>
                <value>
                    <fullName>Airbus Yellow Tag</fullName>
                </value>
                <value>
                    <fullName>AnyPMA/Conformity</fullName>
                </value>
                <value>
                    <fullName>Boeing FAA 8130-3</fullName>
                </value>
                <value>
                    <fullName>Boeing Source</fullName>
                </value>
                <value>
                    <fullName>COC</fullName>
                </value>
                <value>
                    <fullName>COC; CX Wt Guarantee</fullName>
                </value>
                <value>
                    <fullName>CONFIGURE PER THE -501 SHIPPING CONFIGURATION ITEM</fullName>
                </value>
                <value>
                    <fullName>FAA 8130-3 Tag</fullName>
                </value>
                <value>
                    <fullName>FAA Conformity</fullName>
                </value>
                <value>
                    <fullName>FAA8130-3;CX Wt Guar</fullName>
                </value>
                <value>
                    <fullName>FAAConform;CX WtGuar</fullName>
                </value>
                <value>
                    <fullName>Form1 Appr Data</fullName>
                </value>
                <value>
                    <fullName>Form1 NonAppr Data</fullName>
                </value>
                <value>
                    <fullName>Highest Cert Avail.</fullName>
                </value>
                <value>
                    <fullName>Highest Cert and Cathay Weight Guarantee</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>N/A; CX Wt Guarantee</fullName>
                </value>
                <value>
                    <fullName>PMA A/C Specific</fullName>
                </value>
                <value>
                    <fullName>PMA Any A/C</fullName>
                </value>
                <value>
                    <fullName>PMA Any Airbus A/C</fullName>
                </value>
                <value>
                    <fullName>PMA Any Boeing A/C</fullName>
                </value>
                <value>
                    <fullName>Used/SvcbleRTS8130-3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Special_QA_Instruction__c</fullName>
        <formula>PT_Program__r.PT_Special_QA_Instruction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special QA Instruction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Total_Assets__c</fullName>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Account_Region__c</fullName>
        <formula>TEXT(L2I_Original_Sales_Opportunity__r.Account.L2I_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account__c</fullName>
        <description>Source Sales Opportunity&#39;s Account</description>
        <formula>L2I_Original_Sales_Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Deal_Opportunity_Number__c</fullName>
        <formula>L2I_Original_Sales_Opportunity__r.Parent_Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Deal Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Deal_Opportunity__c</fullName>
        <description>Source Deal Opportunity</description>
        <formula>HYPERLINK(
  &quot;/&quot; &amp; L2I_Original_Sales_Opportunity__r.L2I_Parent_Opportunity__c,
  L2I_Original_Sales_Opportunity__r.L2I_Parent_Opportunity__r.Name,
  &quot;_self&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Deal Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Sales_Opportunity_Number__c</fullName>
        <formula>L2I_Original_Sales_Opportunity__r.L2I_Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Sales Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tied_to_Contractual_Obligation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tied to Contractual Obligation</description>
        <inlineHelpText>Is Case Tied to A Contractual Obligation?</inlineHelpText>
        <label>Tied to Contractual Obligation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Record_ID__c</fullName>
        <description>Agile Accelerator Work Record ID</description>
        <inlineHelpText>Agile Accelerator Work Record ID</inlineHelpText>
        <label>Work ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>PT_PO_Number__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>B2B_Request_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>B2B Request</label>
        <queue>B2B_Request</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_PO_Case_Queue_DSS</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>L2I_Feature_Name__c</columns>
        <columns>PT_PO_Number__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>L2I_Order__c</columns>
        <columns>PT_Payment_Term__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>PO_Case_Type__c</field>
            <operation>equals</operation>
            <value>DSS</value>
        </filters>
        <label>Customer PO Case Queue - DSS</label>
        <queue>PTCustomer_PO_Case</queue>
    </listViews>
    <listViews>
        <fullName>Customer_PO_Case_Queue_IFEC</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>PT_PO_Number__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>PO_Case_Type__c</field>
            <operation>equals</operation>
            <value>IFEC</value>
        </filters>
        <label>Customer PO Case Queue - IFEC</label>
        <queue>PTCustomer_PO_Case</queue>
    </listViews>
    <listViews>
        <fullName>IFE_Support_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IFE Support</label>
        <queue>IFE_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2ICustomer_PO_Case_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer PO Case</label>
        <queue>PTCustomer_PO_Case</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>L2I_Activation_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.L2I_Aircraft_Order</value>
        </filters>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>PT_PO_Number__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>New_Customer_PO_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>PT_PO_Number__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>PO_Case_Type__c</field>
            <operation>equals</operation>
            <value>IFEC</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Customer PO Cases</label>
        <queue>PTCustomer_PO_Case</queue>
    </listViews>
    <listViews>
        <fullName>PTCustomer_PO_Case_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer PO Case</label>
        <queue>PTCustomer_PO_Case</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Technical_Publication_Support_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Technical Publication Support</label>
        <queue>Technical_Publication_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>B2B_Request</fullName>
        <active>true</active>
        <businessProcess>Community Support</businessProcess>
        <label>B2B Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Community_Support</fullName>
        <active>true</active>
        <businessProcess>Community Support</businessProcess>
        <label>Community Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>DSS_PO_Case_1</fullName>
        <active>true</active>
        <businessProcess>DSS PO Case</businessProcess>
        <description>Used to manage Customer Purchase Order process for DSS Orders</description>
        <label>DSS PO Case 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>DSS_PO_Case_2_Closed</fullName>
        <active>true</active>
        <businessProcess>DSS PO Case</businessProcess>
        <label>DSS PO Case 2- Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_Action</fullName>
        <active>true</active>
        <businessProcess>Global Action</businessProcess>
        <description>Global Action Help Needed</description>
        <label>Global Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>IFE_Priority_Upgrade</fullName>
        <active>true</active>
        <businessProcess>Community Support</businessProcess>
        <label>IFE Priority Upgrade</label>
    </recordTypes>
    <recordTypes>
        <fullName>IFE_Shop_Support</fullName>
        <active>true</active>
        <businessProcess>Community Support</businessProcess>
        <label>IFE Shop Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>L2I_Aircraft_Order</fullName>
        <active>true</active>
        <businessProcess>L2I_Aircraft_Order</businessProcess>
        <label>Aircraft Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>PT_Customer_Purchase_Order</fullName>
        <active>true</active>
        <businessProcess>PT Customer Purchase Order 1</businessProcess>
        <description>Used to manage Customer Purchase Order process for Hardware/IFEC Orders</description>
        <label>Customer Purchase Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>PT_Customer_Purchase_Order_1_1</fullName>
        <active>true</active>
        <businessProcess>PT Customer Purchase Order%2E1%2E1</businessProcess>
        <description>Used to manage the customer purchase order process</description>
        <label>Customer Purchase Order.1.1</label>
    </recordTypes>
    <recordTypes>
        <fullName>PT_Customer_Purchase_Order_2</fullName>
        <active>true</active>
        <businessProcess>PT Customer Purchase Order%2E2</businessProcess>
        <description>Used to partially lock the Customer Purchase Order</description>
        <label>Customer Purchase Order.2</label>
    </recordTypes>
    <recordTypes>
        <fullName>PT_Customer_Purchase_Order_3</fullName>
        <active>true</active>
        <businessProcess>PT Customer Purchase Order%2E3</businessProcess>
        <description>Used to fully lock the customer purchase order</description>
        <label>Customer Purchase Order.3</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Publication_Support</fullName>
        <active>true</active>
        <businessProcess>Community Support</businessProcess>
        <description>Questions / Feedback for Technical Publication Team</description>
        <label>Technical Publication Support</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Cancled_Cases_must_have_Order_Qty_of_0</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
				ISPICKVAL(Status, &quot;Canceled&quot;),
				NOT(Asset.PT_Order_Quantity__c  =   0),
			OR(
							ISPICKVAL(PO_Case_Type__c, &quot;DSS&quot;),
							ISPICKVAL(PO_Case_Type__c, &quot;IFEC&quot;)
							)
				)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Order Quantity on all related Assets need to be reduced to &quot;0&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DSS_Missing_Payment_Term</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Ready to Invoice&quot;),
ISPICKVAL(PO_Case_Type__c, &quot;DSS&quot;),
ISBLANK(PT_Payment_Term__c))</errorConditionFormula>
        <errorMessage>Payment term must be updated on the related Account before you will be able to proceed to &quot;Ready to Invoice&quot; status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DSS_Missing_Required_Deliverable_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Ready to Invoice&quot;),
ISPICKVAL(PO_Case_Type__c, &quot;DSS&quot;),
L2I_Order__r.L2I_Product_Category_2__c = &quot;MCS&quot;,
OR(
ISPICKVAL(PT_Freight_Terms__c, &quot;&quot;),
ISBLANK(PT_Shipping_Method__c),
ISBLANK(PT_Packing_Instructions__c),
ISBLANK(PT_Shipping_Instructions__c ),
ISBLANK(PT_Ship_to_Customer__c ),
ISBLANK(PT_Ship_to_Location__c )))</errorConditionFormula>
        <errorMessage>Please refer to the &quot;Required Fields for Deliverables&quot; section and ensure all fields have a value before changing the Status to &quot;Ready to Invoice&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DSS_Missing_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Ready to Invoice&quot;),
AND(
ISPICKVAL(PO_Case_Type__c, &quot;DSS&quot;),
OR(
ISBLANK(PT_INCOTERMS__c),
ISBLANK(PT_PO_Number__c),
ISBLANK(PT_PO_Received_Date__c),
ISBLANK(PT_Bill_to_Location__c))))</errorConditionFormula>
        <errorMessage>Please refer to the &quot;Required Fields&quot; section and ensure all fields have a value before changing the Status to &quot;Ready to Invoice&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_ActivationDate_Needs_Activate_ASAs</fullName>
        <active>false</active>
        <errorConditionFormula>AND ($Setup.L2I_Rule_Settings__c.Enforce_Validation_Rule__c,
					ISCHANGED(L2I_Activation_Date__c ),
NOT(ISBLANK( L2I_Activation_Date__c )),
 L2I_Activate_ASA_Record_Count__c  = 0)</errorConditionFormula>
        <errorMessage>Case may not be activated since there are no Aircraft Service Actions requiring activation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Cancel_Date_Needs_Cancel_ASAs</fullName>
        <active>true</active>
        <errorConditionFormula>AND ($Setup.L2I_Rule_Settings__c.Enforce_Validation_Rule__c,
ISCHANGED(L2I_Cancel_Date__c ),
NOT(ISBLANK( L2I_Cancel_Date__c  )), 
L2I_Cancel_ASA_Record_Count__c  = 0)</errorConditionFormula>
        <errorMessage>Case may not be canceled since there are no Aircraft Service Actions requiring cancellation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Date_Validations_for_prior_dates</fullName>
        <active>true</active>
        <description>Activation Date &amp; Deactivation Date when set cannot be more then 7 days prior to today</description>
        <errorConditionFormula>$Setup.L2I_Rule_Settings__c.Enforce_Validation_Rule__c &amp;&amp;
( $Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
$Profile.Name &lt;&gt; &quot;PAC System Administrator&quot; &amp;&amp;
$Profile.Name &lt;&gt; &quot;PAC Integration&quot; )
&amp;&amp;
( ( ISCHANGED(L2I_Activation_Date__c) &amp;&amp;
(TODAY() - DATEVALUE(L2I_Activation_Date__c) &gt;7)
)
||
( ISCHANGED(L2I_Deactivation_Date__c) &amp;&amp;
(TODAY() - DATEVALUE(L2I_Deactivation_Date__c) &gt;7)
)
)</errorConditionFormula>
        <errorMessage>Activation/Deactivation Dates can only be set a week prior to today, any older activation/deactivation may need manual usage adjustment. Please contact IT updates are needed prior to 7 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Deactivation_Date_Validation</fullName>
        <active>true</active>
        <description>Deactivation date cannot be prior to Activation Date</description>
        <errorConditionFormula>$Setup.L2I_Rule_Settings__c.Enforce_Validation_Rule__c &amp;&amp; 
ISCHANGED(L2I_Deactivation_Date__c ) &amp;&amp; L2I_Activation_Date__c &gt; L2I_Deactivation_Date__c
&amp;&amp; Not(ISPICKVAL(L2I_Case_Process__c, &quot;Revise&quot;))</errorConditionFormula>
        <errorMessage>Deactivation date cannot be prior to Activation Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_DeactiveDate_Needs_Deactivate_ASAs</fullName>
        <active>true</active>
        <errorConditionFormula>AND ($Setup.L2I_Rule_Settings__c.Enforce_Validation_Rule__c,
ISCHANGED(L2I_Deactivation_Date__c ),
NOT(ISBLANK( L2I_Deactivation_Date__c )),
L2I_Deactivate_ASA_Record_Count__c = 0)</errorConditionFormula>
        <errorMessage>Case may not be deactivated since there are no Aircraft Service Actions requiring deactivation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Delay_for_DSS_PO_CASE</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Not(L2I_Order__r.L2I_DSS_PO_Case_Closed__c),
			NOT(L2I_Product_Category_2__c = &quot;Cell Modem&quot;),
			NOT(L2I_Product_Category_2__c = &quot;TV/Media&quot;),
			NOT(L2I_Product_Category_2__c = &quot;WiFi&quot;),
			ISCHANGED(L2I_Activation_Date__c) ,
			RecordType.DeveloperName = &quot;L2I_Aircraft_Order&quot;
			)</errorConditionFormula>
        <errorMessage>Please Update DSS Order PO Case with PO number and complete the case before activating the case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PT_Customer_PO_Case_missing_req_fields</fullName>
        <active>true</active>
        <description>Validation to prevent the status of the customer PO Case changing to &quot;Ready to Order&quot; unless all required values are populated</description>
        <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Ready to Order&quot;),
OR(
ISBLANK(PT_PO_Number__c),
ISPICKVAL(PT_Order_Type_Context__c, &quot;&quot;) ,
ISBLANK(PT_Payment_Term__c),
ISPICKVAL(PT_Freight_Terms__c, &quot;&quot;),
ISBLANK(PT_INCOTERMS__c),
ISBLANK(PT_PO_Received_Date__c),
ISBLANK(PT_Ship_to_Customer__c),
ISBLANK(PT_Ship_to_Location__c),
ISBLANK(PT_Bill_to_Location__c),
ISBLANK(PT_Shipping_Method__c),
ISBLANK(PT_Total_Assets__c)
))</errorConditionFormula>
        <errorMessage>Parts/Assets need to be associated and all fields in the &quot;Required for Ordering&quot; section need to be populated before setting Status to Ready to Order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PT_Customer_PO_Case_missing_req_fields2</fullName>
        <active>true</active>
        <description>Validation to prevent deletion of field values when the Customer PO Case is in &quot;Ordered&quot; Status</description>
        <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Ordered&quot;),
OR(
ISBLANK(PT_PO_Number__c),
ISPICKVAL(PT_Order_Type_Context__c, &quot;&quot;) ,
ISBLANK(PT_Payment_Term__c),
ISPICKVAL(PT_Freight_Terms__c, &quot;&quot;),
ISBLANK(PT_INCOTERMS__c),
ISBLANK(PT_PO_Received_Date__c),
ISBLANK(PT_Ship_to_Customer__c),
ISBLANK(PT_Ship_to_Location__c),
ISBLANK(PT_Bill_to_Location__c),
ISBLANK(PT_Shipping_Method__c)
))</errorConditionFormula>
        <errorMessage>All fields in the &quot;Required for Ordering&quot; section need to be populated when Status is set to Ordered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PT_Customer_PO_Case_status_Not_New</fullName>
        <active>true</active>
        <description>This validation prevents the user (Order Administrator) from moving the Customer PO Case into &quot;In Progress&quot; Status when the owner of the case is the Customer PO Case Queue</description>
        <errorConditionFormula>TEXT(Status) &lt;&gt; &#39;New&#39; &amp;&amp;
Owner:Queue.QueueName = &quot;Customer PO Case&quot;</errorConditionFormula>
        <errorMessage>Case Owner cannot be Customer PO Case queue unless case is in &quot;New&quot; status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PT_Customer_PO_Order_Type_Context</fullName>
        <active>true</active>
        <description>Fields CR Number and Purpose are only required to populate when the Order Type Context =  &quot;Irvine Direct - S/W&quot;</description>
        <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Ready to Order&quot;),
AND(
ISPICKVAL(PT_Order_Type_Context__c, &quot;Irvine Direct - S/W&quot;),
OR(
ISPICKVAL(PT_Purpose__c, &quot;&quot;))))</errorConditionFormula>
        <errorMessage>When Order Type Context is &quot;Irvine Direct - S/W&quot;, the Purpose field must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Program_lookup_Change</fullName>
        <active>true</active>
        <description>Program lookup cannot be changed when there are assets associated to the case</description>
        <errorConditionFormula>ISCHANGED(PT_Program__c) &amp;&amp;
PT_Total_Assets__c &gt; 0</errorConditionFormula>
        <errorDisplayField>PT_Program__c</errorDisplayField>
        <errorMessage>Program lookup cannot be changed because there are Assets associated to this Case</errorMessage>
    </validationRules>
</CustomObject>